--- a/.github/workflows/swift-build-test.yml
+++ b/.github/workflows/swift-build-test.yml
@@ -1,9 +1,14 @@
 # This workflow will build a Swift project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: Swift
+name: Build Push
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+    tags-ignore:
+      - "**"
 
 jobs:
   build:
